manifests/deploy-strategies/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  labels:
    app: my-app
    app.kubernetes.io/name: my-app
    sticky: "true"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      annotations:
        sage/group: "ab2_islamov"
        prometheus.io/scrape: "true"
        prometheus.io/port: "9101"
        prometheus.io/path: "/metrics"
      labels:
        app: my-app
        version: v1.0.0
        sticky: "true"
    spec:
      containers:
        - name: my-app
          image: containersol/k8s-deployment-strategies
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 9101
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
        - name: json-log-sidecar
          image: busybox:1.36
          command: [ "/bin/sh","-lc" ]
          args:
            - |
              while true; do
                HOST=$(hostname)
                printf '{"env":"st","system":"my-app","inst":"%s","level":"INFO","message":"sidecar heartbeat"}\n' "$HOST"
                sleep 5
              done
          resources:
            requests: { cpu: "5m", memory: "16Mi" }
            limits: { cpu: "50m", memory: "32Mi" }
