manifests/deploy-strategies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/upstream-hash-by: "$http_x_session_id"
spec:
  ingressClassName: nginx
  rules:
    - host: my-app.st-ab2-islamov.ingress.sre-ab.ru
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  number: 8080
